# lst-tracking-hackathon

./: .cruft.json  .gitignore  .pre-commit-config.yaml  030_first_oc.ipynb  README.md  setup.cfg  setup.py
configs/: data.yml  ec.yml  model.yml  train.yml
configs/ef/: data.yml  model.yml  model_focal.yml
configs/oc/: data.yml  model.yml  train.yml
notebooks/: 010_convert_data.ipynb  020_exploration.ipynb  030_failure_modes_foms.ipynb  030_first_oc.ipynb  040_ec_roc_curve.ipynb  050_connectivity.ipynb  ingress.json
scripts/: run_cli.py  run_ec.py  run_oc.py  submit.slurm  submit_ef.slurm  submit_oc.slurm  tune.py
src/lstcondensation/: loader.py  model.py  util.py
