[metadata]
name = lstcondensation
description = This is a package
url = https://github.com/gnn-tracking/lst-condensation-hackathon
version = file: src/lstcondensation/version.txt
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE.txt
python_requires = >=3.6
project_urls =
    Bug Tracker =   https://github.com/gnn-tracking/lst-condensation-hackathon/issues
    Source Code =   https://github.com/gnn-tracking/lst-condensation-hackathon/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
author = Kilian Lieret
author_email = kilian.lieret@posteo.de
maintainer = Kilian Lieret
maintainer_email = kilian.lieret@posteo.de

[options]
package_dir=
    =src
packages = find:
include_package_data = True
zip_safe = False
install_requires =

[options.extras_require]
testing = pytest; pytest-coverage

[options.packages.find]
where=src

[tool:pytest]
addopts = --cov=lstcondensation
